// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormElement /> Should hide placeholder with hasValue 1`] = `
<FormElement
  className=""
  errorText=""
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={true}
  htmlFor="test-input"
  isFocused={false}
  label="testlabel"
  placeholder=""
  translateErrorText={true}
>
  <div
    className="css-1vjh8yv formElement"
  >
    <Placeholder
      aria-hidden={true}
      placeholder="testlabel"
      visible={false}
    >
      <div
        aria-hidden={true}
        className="css-rkuo1o css-1jyyyen placeholder"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string="testlabel"
          transform={null}
        >
          <span
            className={null}
            role={null}
          >
            testlabel
          </span>
        </Translate>
      </div>
    </Placeholder>
    <Label
      hasErrorMessage={false}
      htmlFor="test-input"
      isFloating={true}
      isFocused={false}
      label="testlabel"
    >
      <label
        className="css-1nn9zl4 css-1r91c0g css-1jyyyen label"
        htmlFor="test-input"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string="testlabel"
          transform={null}
        >
          <span
            className={null}
            role={null}
          >
            testlabel
          </span>
        </Translate>
      </label>
    </Label>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "var(--color-primary, #fa5400)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
  </div>
</FormElement>
`;

exports[`<FormElement /> should render a focused form element 1`] = `
<FormElement
  className=""
  errorText=""
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={true}
  label=""
  placeholder=""
  translateErrorText={true}
>
  <div
    className="css-1vjh8yv formElement"
  >
    <Underline
      hasErrorMessage={false}
      isFocused={true}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "var(--color-primary, #fa5400)",
            }
          }
        />
      </div>
    </Underline>
  </div>
</FormElement>
`;

exports[`<FormElement /> should render a form element with 1 child 1`] = `
<FormElement
  className=""
  errorText=""
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={false}
  label=""
  placeholder=""
  translateErrorText={true}
>
  <div
    className="css-1vjh8yv formElement"
  >
    <input
      key="test-key"
    />
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "var(--color-primary, #fa5400)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
  </div>
</FormElement>
`;

exports[`<FormElement /> should render a form element with no children 1`] = `
<FormElement
  className=""
  errorText=""
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={false}
  label=""
  placeholder=""
  translateErrorText={true}
>
  <div
    className="css-1vjh8yv formElement"
  >
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "var(--color-primary, #fa5400)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
  </div>
</FormElement>
`;

exports[`<FormElement /> should show the error message 1`] = `
<FormElement
  className=""
  errorText="The error text"
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={false}
  label=""
  placeholder=""
  translateErrorText={true}
>
  <div
    className="css-1vjh8yv formElement"
  >
    <Underline
      hasErrorMessage={true}
      isFocused={false}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "#ff0000",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className={null}
      errorText="The error text"
      translate={true}
    >
      <div
        className="css-hyvrm8 errorText"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string="The error text"
          transform={null}
        >
          <span
            className={null}
            role={null}
          >
            The error text
          </span>
        </Translate>
      </div>
    </ErrorText>
  </div>
</FormElement>
`;

exports[`<FormElement /> should show the label 1`] = `
<FormElement
  className=""
  errorText=""
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={false}
  label="The label"
  placeholder=""
  translateErrorText={true}
>
  <div
    className="css-1vjh8yv formElement"
  >
    <Placeholder
      aria-hidden={true}
      placeholder="The label"
      visible={true}
    >
      <div
        aria-hidden={true}
        className="css-rkuo1o placeholder"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string="The label"
          transform={null}
        >
          <span
            className={null}
            role={null}
          >
            The label
          </span>
        </Translate>
      </div>
    </Placeholder>
    <Label
      hasErrorMessage={false}
      htmlFor="test-input"
      isFloating={false}
      isFocused={false}
      label="The label"
    >
      <label
        className="css-1nn9zl4 css-1jyyyen label"
        htmlFor="test-input"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string="The label"
          transform={null}
        >
          <span
            className={null}
            role={null}
          >
            The label
          </span>
        </Translate>
      </label>
    </Label>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "var(--color-primary, #fa5400)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
  </div>
</FormElement>
`;

exports[`<FormElement /> should show the placeholder text 1`] = `
<FormElement
  className=""
  errorText=""
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={false}
  label=""
  placeholder="The placeholder"
  translateErrorText={true}
>
  <div
    className="css-1vjh8yv formElement"
  >
    <Placeholder
      aria-hidden={true}
      placeholder="The placeholder"
      visible={true}
    >
      <div
        aria-hidden={true}
        className="css-rkuo1o placeholder"
      >
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string="The placeholder"
          transform={null}
        >
          <span
            className={null}
            role={null}
          >
            The placeholder
          </span>
        </Translate>
      </div>
    </Placeholder>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l underline"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "var(--color-primary, #fa5400)",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
  </div>
</FormElement>
`;
